--- a/tpl/footer.html
+++ b/tpl/footer.html
@@ -14,9 +14,7 @@
       <!-- COL 1 -->
       <div class="space-y-6">
         <div>
-          <div class="text-[20px] font-semibold mb-3">
-            Корпуса
-          </div>
+          <div class="text-[20px] font-semibold mb-3">Корпуса</div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Главный корпус</a>
             <a href="#" class="block hover:text-[#C93635]">Ризница Троице-Сергиевской Лавры</a>
@@ -30,9 +28,7 @@
         </a>
 
         <div>
-          <div class="text-[20px] font-semibold mb-3">
-            Для групп
-          </div>
+          <div class="text-[20px] font-semibold mb-3">Для групп</div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Турфирмам</a>
             <a href="#" class="block hover:text-[#C93635]">Группам учащихся</a>
@@ -45,9 +41,7 @@
 
       <!-- COL 2 -->
       <div>
-        <div class="text-[20px] font-semibold mb-3">
-          Посетителям
-        </div>
+        <div class="text-[20px] font-semibold mb-3">Посетителям</div>
         <div class="space-y-2">
           <a href="#" class="block hover:text-[#C93635]">Часто задаваемые вопросы</a>
           <a href="#" class="block hover:text-[#C93635]">Билеты</a>
@@ -65,25 +59,19 @@
 
       <!-- COL 3 -->
       <div>
-        <div class="text-[20px] font-semibold mb-3">
-          Мероприятия
-        </div>
+        <div class="text-[20px] font-semibold mb-3">Мероприятия</div>
         <div class="space-y-2 mb-10">
           <a href="#" class="block hover:text-[#C93635]">Афиша</a>
           <a href="#" class="block hover:text-[#C93635]">Выходные в Сергиевом Посаде</a>
         </div>
 
         <div>
-          <div class="text-[20px] font-semibold mb-3">
-            Экскурсии
-          </div>
+          <div class="text-[20px] font-semibold mb-3">Экскурсии</div>
           <a href="#" class="block hover:text-[#C93635]">Экскурсии</a>
         </div>
 
         <div class="mt-10">
-          <div class="text-[20px] font-semibold mb-3">
-            О музее
-          </div>
+          <div class="text-[20px] font-semibold mb-3">О музее</div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Научная деятельность</a>
             <a href="#" class="block hover:text-[#C93635]">Документы</a>
@@ -157,6 +145,42 @@
 
   </div>
 
-  <!-- MOBILE — без изменений -->
+  <!-- ================= MOBILE ================= -->
+  <div class="lg:hidden px-4 py-10 text-[#24272A] text-[14px] leading-[160%]">
+
+    <div class="space-y-8">
+
+      <div>
+        <div class="font-semibold mb-2">Контакты</div>
+        <a href="mailto:sergiev-mus@mail.ru" class="block font-semibold">
+          sergiev-mus@mail.ru
+        </a>
+        <a href="tel:+74965405356" class="block">8 496 540-53-56</a>
+        <a href="tel:+79850404517" class="block">8 985 040-45-17</a>
+      </div>
+
+      <div class="text-[#6B7280]">
+        141310, Россия, Московская область,<br>
+        г. Сергиев Посад, Проспект Красной Армии, д. 144
+      </div>
+
+      <div class="flex gap-4">
+        <a href="#"><img src="/assets/svg/telegram.svg" class="w-8 h-8"></a>
+        <a href="#"><img src="/assets/svg/vk.svg" class="w-8 h-8"></a>
+        <a href="#"><img src="/assets/svg/youtube.png" class="w-8 h-8"></a>
+        <a href="#"><img src="/assets/svg/ok.svg" class="w-8 h-8"></a>
+      </div>
+
+      <a href="#" class="block text-[#6B7280]">
+        Политика конфиденциальности
+      </a>
+
+      <div class="text-[#6B7280]">
+        © 2025 ФГБУК «Сергиево-Посадский государственный
+        историко-художественный музей-заповедник»
+      </div>
+
+    </div>
+  </div>
 
 </footer>
