--- a/tpl/menu-mobile.html
+++ b/tpl/menu-mobile.html
@@ -1,117 +1,121 @@
-<!-- MOBILE MENU OVERLAY -->
+<!-- MOBILE MENU -->
 <div
-    x-data="{
-        open: false,
-        active: null
-    }"
-    x-cloak
-    @toggle-menu.window="open = !open"
-    x-show="open"
-    x-transition.opacity.duration.200ms
-    class="fixed inset-0 z-50 bg-white lg:hidden overflow-x-hidden"
+  x-data="{ open:false }"
+  @toggle-menu.window="open = !open"
+  x-show="open"
+  x-cloak
+  class="absolute inset-0 z-50 lg:hidden"
 >
 
-    <!-- TOP BAR -->
+  <!-- OVERLAY -->
+  <div
+    class="fixed inset-0 bg-white"
+    @click="open=false"
+  ></div>
+
+  <!-- PANEL -->
+  <div class="relative h-screen flex flex-col">
+
+    <!-- HEADER -->
     <div class="h-[64px] px-4 flex items-center justify-between border-b border-[#DCDEE0] shrink-0">
-        <img
-            src="/assets/svg/logo.svg"
-            alt="Сергиево-Посадский музей-заповедник"
-            class="h-[36px] w-auto"
-        >
+      <img
+        src="/assets/svg/logo.svg"
+        alt="Сергиево-Посадский музей-заповедник"
+        class="h-[36px]"
+      >
+
+      <div class="flex items-center gap-2">
+        <a href="/notifications.html" class="relative w-10 h-10 flex items-center justify-center">
+          <img src="/assets/svg/bell.svg" class="w-5 h-5" alt="">
+          <span class="absolute top-1 right-1 w-5 h-5 text-xs bg-[#C93635] text-white flex items-center justify-center">
+            3
+          </span>
+        </a>
 
         <button
-            @click="open = false"
-            class="w-10 h-10 flex items-center justify-center text-2xl leading-none"
-            aria-label="Закрыть меню"
+          @click="open=false"
+          class="w-10 h-10 flex items-center justify-center text-2xl"
+          aria-label="Закрыть меню"
         >
-            ×
+          ×
         </button>
+      </div>
     </div>
 
-    <!-- SCROLL AREA -->
-    <div class="h-[calc(100vh-64px)] overflow-y-auto overscroll-contain">
+    <!-- SCROLLABLE CONTENT -->
+    <div class="flex-1 overflow-y-auto">
 
-        <!-- MENU LIST -->
-        <ul class="divide-y divide-[#DCDEE0] text-[18px] leading-tight">
+      <nav class="divide-y divide-[#DCDEE0] text-[18px]">
 
-            <!-- Корпуса -->
-            <li>
-                <button
-                    @click="active === 'corps' ? active=null : active='corps'"
-                    class="w-full flex items-center justify-between px-4 py-5 text-left"
-                >
-                    <span>Корпуса</span>
-                    <span
-                        class="transition-transform duration-200"
-                        :class="active==='corps' ? 'rotate-180' : ''"
-                    >⌄</span>
-                </button>
+        <!-- Корпуса -->
+        <details class="group">
+          <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
+            <span>Корпуса</span>
+            <span class="transition group-open:rotate-180">⌄</span>
+          </summary>
+          <div class="px-6 pb-4 space-y-3 text-[16px]">
+            <a href="/corps/main.html" class="block">Главный корпус</a>
+            <a href="/corps/riznitsa.html" class="block">Ризница Троице-Сергиевой Лавры</a>
+            <a href="/corps/konny-dvor.html" class="block">Музейный комплекс «Конный двор»</a>
+            <a href="/corps/local-history.html" class="block">Краеведческий корпус</a>
+          </div>
+        </details>
 
-                <div
-                    x-show="active==='corps'"
-                    x-collapse
-                    class="px-6 pb-4 text-base space-y-3"
-                >
-                    <a href="/corps/main.html" class="block">Главный корпус</a>
-                    <a href="/corps/riznitsa.html" class="block">Ризница ТСЛ</a>
-                    <a href="/corps/konny-dvor.html" class="block">Конный двор</a>
-                    <a href="/corps/local-history.html" class="block">Краеведческий корпус</a>
-                </div>
-            </li>
+        <a href="/map.html" class="block px-4 py-5">Интерактивная карта</a>
 
-            <li><a href="/map.html" class="block px-4 py-5">Интерактивная карта</a></li>
+        <details class="group">
+          <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
+            <span>Для групп</span>
+            <span class="transition group-open:rotate-180">⌄</span>
+          </summary>
+          <div class="px-6 pb-4 space-y-3 text-[16px]">
+            <a href="#" class="block">Турфирмам</a>
+            <a href="#" class="block">Группам учащихся</a>
+            <a href="#" class="block">Социальным группам и людям с инвалидностью</a>
+            <a href="#" class="block">Паломникам</a>
+            <a href="#" class="block">Билеты и услуги для групп</a>
+          </div>
+        </details>
 
-            <!-- Для групп -->
-            <li>
-                <button
-                    @click="active === 'groups' ? active=null : active='groups'"
-                    class="w-full flex items-center justify-between px-4 py-5 text-left"
-                >
-                    <span>Для групп</span>
-                    <span
-                        class="transition-transform duration-200"
-                        :class="active==='groups' ? 'rotate-180' : ''"
-                    >⌄</span>
-                </button>
+        <details class="group">
+          <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
+            <span>Посетителям</span>
+            <span class="transition group-open:rotate-180">⌄</span>
+          </summary>
+          <div class="px-6 pb-4 space-y-3 text-[16px]">
+            <a href="#" class="block">FAQ</a>
+            <a href="#" class="block">Билеты</a>
+            <a href="#" class="block">Пушкинская карта</a>
+            <a href="#" class="block">Правила посещения</a>
+          </div>
+        </details>
 
-                <div
-                    x-show="active==='groups'"
-                    x-collapse
-                    class="px-6 pb-4 text-base space-y-3"
-                >
-                    <a href="#" class="block">Турфирмам</a>
-                    <a href="#" class="block">Группам учащихся</a>
-                    <a href="#" class="block">Социальным группам</a>
-                    <a href="#" class="block">Людям с инвалидностью</a>
-                    <a href="#" class="block">Паломникам</a>
-                </div>
-            </li>
+        <a href="#" class="block px-4 py-5">Мероприятия</a>
+        <a href="#" class="block px-4 py-5">Выставки и экспозиции</a>
+        <a href="#" class="block px-4 py-5">Экскурсии</a>
+        <a href="#" class="block px-4 py-5">О музее</a>
+        <a href="#" class="block px-4 py-5">Контакты</a>
+      </nav>
 
-            <li><a href="#" class="block px-4 py-5">Посетителям</a></li>
-            <li><a href="#" class="block px-4 py-5">Мероприятия</a></li>
-            <li><a href="#" class="block px-4 py-5">Выставки и экспозиции</a></li>
-            <li><a href="#" class="block px-4 py-5">Экскурсии</a></li>
-            <li><a href="#" class="block px-4 py-5">О музее</a></li>
-            <li><a href="#" class="block px-4 py-5">Контакты</a></li>
+      <!-- FOOT ACTIONS -->
+      <div class="px-4 py-6 space-y-4 border-t border-[#DCDEE0]">
 
-        </ul>
+        <img src="/assets/svg/pushkin-card.svg" class="h-[36px]" alt="">
 
-        <!-- ACTION BUTTONS -->
-        <div class="px-4 py-5 space-y-3 border-t border-[#DCDEE0]">
-            <a
-                href="#"
-                class="block w-full py-3 text-center border border-[#24272A] rounded-lg"
-            >
-                Купить билет
-            </a>
-
-            <a
-                href="#"
-                class="block w-full py-3 text-center bg-[#24272A] text-white rounded-lg"
-            >
-                Заказать экскурсию
-            </a>
+        <div class="flex items-center gap-4">
+          <img src="/assets/svg/eye.svg" class="w-6 h-6" alt="">
+          <span class="font-semibold">RU</span>
         </div>
 
+        <a href="#" class="block w-full text-center py-3 border border-[#24272A]">
+          Купить билет
+        </a>
+
+        <a href="#" class="block w-full text-center py-3 bg-[#24272A] text-white">
+          Заказать экскурсию
+        </a>
+
+      </div>
     </div>
+  </div>
 </div>
