--- a/tpl/menu-mobile.html
+++ b/tpl/menu-mobile.html
@@ -47,13 +47,26 @@
 
       <nav class="divide-y divide-[#DCDEE0] text-[18px]">
 
-        <!-- Корпуса -->
+        <!-- О музее -->
+        <a href="/about/index.html" class="block px-4 py-5">
+          О музее
+        </a>
+
+        <!-- ОБЪЕКТЫ -->
         <details class="group">
           <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
-            <span>Корпуса</span>
+            <span>Объекты</span>
             <span class="transition group-open:rotate-180">⌄</span>
           </summary>
+
           <div class="px-6 pb-4 space-y-3 text-[16px]">
+
+            <a href="/map.html" class="block">
+              Интерактивная карта
+            </a>
+
+            <div class="h-px bg-[#DCDEE0] my-2"></div>
+
             <a href="/corps/main.html" class="block">Главный корпус</a>
             <a href="/corps/riznitsa.html" class="block">Ризница Троице-Сергиевой Лавры</a>
             <a href="/corps/konny-dvor.html" class="block">Музейный комплекс «Конный двор»</a>
@@ -61,40 +74,45 @@
           </div>
         </details>
 
-        <a href="/map.html" class="block px-4 py-5">Интерактивная карта</a>
-
-        <details class="group">
-          <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
-            <span>Для групп</span>
-            <span class="transition group-open:rotate-180">⌄</span>
-          </summary>
-          <div class="px-6 pb-4 space-y-3 text-[16px]">
-            <a href="#" class="block">Турфирмам</a>
-            <a href="#" class="block">Группам учащихся</a>
-            <a href="#" class="block">Социальным группам и людям с инвалидностью</a>
-            <a href="#" class="block">Паломникам</a>
-            <a href="#" class="block">Билеты и услуги для групп</a>
-          </div>
-        </details>
-
+        <!-- Посетителям -->
         <details class="group">
           <summary class="px-4 py-5 flex items-center justify-between cursor-pointer list-none">
             <span>Посетителям</span>
             <span class="transition group-open:rotate-180">⌄</span>
           </summary>
           <div class="px-6 pb-4 space-y-3 text-[16px]">
-            <a href="#" class="block">FAQ</a>
-            <a href="#" class="block">Билеты</a>
-            <a href="#" class="block">Пушкинская карта</a>
-            <a href="#" class="block">Правила посещения</a>
+            <a href="/faq.html" class="block">FAQ</a>
+            <a href="/tickets.html" class="block">Билеты</a>
+            <a href="/pushkin-card.html" class="block">Пушкинская карта</a>
+            <a href="/rules.html" class="block">Правила посещения</a>
           </div>
         </details>
 
-        <a href="#" class="block px-4 py-5">Мероприятия</a>
-        <a href="#" class="block px-4 py-5">Выставки и экспозиции</a>
-        <a href="#" class="block px-4 py-5">Экскурсии</a>
-        <a href="#" class="block px-4 py-5">О музее</a>
-        <a href="#" class="block px-4 py-5">Контакты</a>
+        <!-- Мероприятия -->
+        <a href="/events.html" class="block px-4 py-5">
+          Мероприятия
+        </a>
+
+        <!-- Выставки -->
+        <a href="/exhibitions.html" class="block px-4 py-5">
+          Выставки и экспозиции
+        </a>
+
+        <!-- Экскурсии -->
+        <a href="/excursions.html" class="block px-4 py-5">
+          Экскурсии
+        </a>
+
+        <!-- Музей онлайн -->
+        <a href="/museum-online.html" class="block px-4 py-5">
+          Музей-онлайн
+        </a>
+
+        <!-- Контакты -->
+        <a href="/contacts.html" class="block px-4 py-5">
+          Контакты
+        </a>
+
       </nav>
 
       <!-- FOOT ACTIONS -->
@@ -107,11 +125,11 @@
           <span class="font-semibold">RU</span>
         </div>
 
-        <a href="#" class="block w-full text-center py-3 border border-[#24272A]">
+        <a href="/tickets.html" class="block w-full text-center py-3 border border-[#24272A]">
           Купить билет
         </a>
 
-        <a href="#" class="block w-full text-center py-3 bg-[#24272A] text-white">
+        <a href="/excursions.html" class="block w-full text-center py-3 bg-[#24272A] text-white">
           Заказать экскурсию
         </a>
 
