--- a/about/science.html
+++ b/about/science.html
@@ -59,9 +59,9 @@
         <div class="text-sm font-semibold mb-3">Годы</div>
         <div class="flex flex-wrap gap-4">
           <input type="number" placeholder="2020"
-            class="filter-input w-[120px] border border-[#DCDEE0] px-4 py-3">
+                 class="filter-input w-[120px] border border-[#DCDEE0] px-4 py-3">
           <input type="number" placeholder="2025"
-            class="filter-input w-[120px] border border-[#DCDEE0] px-4 py-3">
+                 class="filter-input w-[120px] border border-[#DCDEE0] px-4 py-3">
         </div>
       </div>
 
@@ -69,19 +69,19 @@
       <div class="flex flex-wrap gap-6">
         <label class="flex items-center gap-3 cursor-pointer">
           <input type="radio" name="place" value="all"
-            class="filter-input accent-[#C93635]" checked>
+                 class="filter-input accent-[#C93635]" checked>
           <span>Все</span>
         </label>
 
         <label class="flex items-center gap-3 cursor-pointer">
           <input type="radio" name="place" value="inside"
-            class="filter-input accent-[#C93635]">
+                 class="filter-input accent-[#C93635]">
           <span>В музее</span>
         </label>
 
         <label class="flex items-center gap-3 cursor-pointer">
           <input type="radio" name="place" value="outside"
-            class="filter-input accent-[#C93635]">
+                 class="filter-input accent-[#C93635]">
           <span>Вне музея</span>
         </label>
       </div>
@@ -91,8 +91,11 @@
     <section class="mt-14 grid gap-x-6 gap-y-12 sm:grid-cols-2 lg:grid-cols-4">
 
       <article>
-        <img src="/assets/img/about/science/1.png"
-             class="w-full aspect-[4/3] object-cover mb-4">
+        <img
+          data-src="/assets/img/about/science/1.png"
+          alt=""
+          class="lazy-img w-full aspect-[4/3] object-cover mb-4 bg-[#F3F4F6]"
+        >
         <div class="text-sm text-[#8D9399] mb-2">
           16 ноября 2023 — 17 ноября 2023
         </div>
@@ -102,8 +105,8 @@
       </article>
 
       <article>
-        <img src="/assets/img/about/science/2.png"
-             class="w-full aspect-[4/3] object-cover mb-4">
+        <img data-src="/assets/img/about/science/2.png"
+             class="lazy-img w-full aspect-[4/3] object-cover mb-4 bg-[#F3F4F6]">
         <div class="text-sm text-[#8D9399] mb-2">
           29 февраля 2024 — 29 марта 2024
         </div>
@@ -113,8 +116,8 @@
       </article>
 
       <article>
-        <img src="/assets/img/about/science/3.png"
-             class="w-full aspect-[4/3] object-cover mb-4">
+        <img data-src="/assets/img/about/science/3.png"
+             class="lazy-img w-full aspect-[4/3] object-cover mb-4 bg-[#F3F4F6]">
         <div class="text-sm text-[#8D9399] mb-2">
           21 ноября 2023 — 21 ноября 2023
         </div>
@@ -124,8 +127,8 @@
       </article>
 
       <article>
-        <img src="/assets/img/about/science/4.png"
-             class="w-full aspect-[4/3] object-cover mb-4">
+        <img data-src="/assets/img/about/science/4.png"
+             class="lazy-img w-full aspect-[4/3] object-cover mb-4 bg-[#F3F4F6]">
         <div class="text-sm text-[#8D9399] mb-2">
           31 мая 2023 — 31 мая 2023
         </div>
@@ -144,7 +147,7 @@
   <!-- INCLUDE -->
   <script src="/include.js"></script>
 
-  <!-- Alpine (ЯВНО) -->
+  <!-- Alpine -->
   <script src="https://unpkg.com/alpinejs" defer></script>
 
   <!-- FIX HEADER DROPDOWNS -->
@@ -185,6 +188,26 @@
     });
 
     checkFilters();
+  </script>
+
+  <!-- LAZY LOAD IMAGES -->
+  <script>
+    const lazyImages = document.querySelectorAll('.lazy-img');
+
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          const img = entry.target;
+          img.src = img.dataset.src;
+          img.removeAttribute('data-src');
+          obs.unobserve(img);
+        }
+      });
+    }, {
+      rootMargin: '200px'
+    });
+
+    lazyImages.forEach(img => observer.observe(img));
   </script>
 
 </body>
